--- a/web/src/app/bilibili-channel/bilibili-channel.component.html
+++ b/web/src/app/bilibili-channel/bilibili-channel.component.html
@@ -8,7 +8,7 @@
       mat-table
       [dataSource]="dataSource"
       matSort
-      matSortActive="bilibiliSubs"
+      matSortActive="subs"
       matSortDirection="desc"
       matSortDisableClear
     >
@@ -26,135 +26,101 @@
 
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef>名稱</th>
-        <td mat-cell *matCellDef="let row">{{ findVTuber(row.id).name }}</td>
+        <td mat-cell *matCellDef="let row" lang="jp">
+          {{ findVTuber(row.id).name }}
+        </td>
         <td mat-footer-cell *matFooterCellDef>總計</td>
       </ng-container>
 
-      <ng-container matColumnDef="bilibiliSubs">
+      <ng-container matColumnDef="subs">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Bilibili 訂閱</th>
         <td mat-cell *matCellDef="let row">
-          {{ row.bilibiliStats.subs | number }}
+          {{ row.subs | number }}
         </td>
         <td mat-footer-cell *matFooterCellDef>
-          {{ totalBilibiliSubs | number }}
+          {{ totalSubs | number }}
         </td>
       </ng-container>
 
-      <ng-container matColumnDef="bilibiliDailySubs">
+      <ng-container matColumnDef="dailySubs">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>日增</th>
-        <td
-          mat-cell
-          *matCellDef="let row"
-          [coloredNumber]="row.bilibiliStats.dailySubs"
-        >
-          {{ row.bilibiliStats.dailySubs | number }}
+        <td mat-cell *matCellDef="let row" [coloredNumber]="row.dailySubs">
+          {{ row.dailySubs | number }}
         </td>
-        <td
-          mat-footer-cell
-          *matFooterCellDef
-          [coloredNumber]="totalBilibiliDailySubs"
-        >
-          {{ totalBilibiliDailySubs | number }}
+        <td mat-footer-cell *matFooterCellDef [coloredNumber]="totalDailySubs">
+          {{ totalDailySubs | number }}
         </td>
       </ng-container>
 
-      <ng-container matColumnDef="bilibiliWeeklySubs">
+      <ng-container matColumnDef="weeklySubs">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>週增</th>
-        <td
-          mat-cell
-          *matCellDef="let row"
-          [coloredNumber]="row.bilibiliStats.weeklySubs"
-        >
-          {{ row.bilibiliStats.weeklySubs | number }}
+        <td mat-cell *matCellDef="let row" [coloredNumber]="row.weeklySubs">
+          {{ row.weeklySubs | number }}
         </td>
-        <td
-          mat-footer-cell
-          *matFooterCellDef
-          [coloredNumber]="totalBilibiliWeeklySubs"
-        >
-          {{ totalBilibiliWeeklySubs | number }}
+        <td mat-footer-cell *matFooterCellDef [coloredNumber]="totalWeeklySubs">
+          {{ totalWeeklySubs | number }}
         </td>
       </ng-container>
 
-      <ng-container matColumnDef="bilibiliMonthlySubs">
+      <ng-container matColumnDef="monthlySubs">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>月增</th>
-        <td
-          mat-cell
-          *matCellDef="let row"
-          [coloredNumber]="row.bilibiliStats.monthlySubs"
-        >
-          {{ row.bilibiliStats.monthlySubs | number }}
+        <td mat-cell *matCellDef="let row" [coloredNumber]="row.monthlySubs">
+          {{ row.monthlySubs | number }}
         </td>
         <td
           mat-footer-cell
           *matFooterCellDef
-          [coloredNumber]="totalBilibiliMonthlySubs"
+          [coloredNumber]="totalMonthlySubs"
         >
-          {{ totalBilibiliMonthlySubs | number }}
+          {{ totalMonthlySubs | number }}
         </td>
       </ng-container>
 
-      <ng-container matColumnDef="bilibiliViews">
+      <ng-container matColumnDef="views">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Bilibili 觀看</th>
         <td mat-cell *matCellDef="let row">
-          {{ row.bilibiliStats.views | number }}
+          {{ row.views | number }}
         </td>
         <td mat-footer-cell *matFooterCellDef>
-          {{ totalBilibiliViews | number }}
+          {{ totalViews | number }}
         </td>
       </ng-container>
 
-      <ng-container matColumnDef="bilibiliDailyViews">
+      <ng-container matColumnDef="dailyViews">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>日增</th>
-        <td
-          mat-cell
-          *matCellDef="let row"
-          [coloredNumber]="row.bilibiliStats.dailyViews"
-        >
-          {{ row.bilibiliStats.dailyViews | number }}
+        <td mat-cell *matCellDef="let row" [coloredNumber]="row.dailyViews">
+          {{ row.dailyViews | number }}
         </td>
-        <td
-          mat-footer-cell
-          *matFooterCellDef
-          [coloredNumber]="totalBilibiliDailyViews"
-        >
-          {{ totalBilibiliDailyViews | number }}
+        <td mat-footer-cell *matFooterCellDef [coloredNumber]="totalDailyViews">
+          {{ totalDailyViews | number }}
         </td>
       </ng-container>
 
-      <ng-container matColumnDef="bilibiliWeeklyViews">
+      <ng-container matColumnDef="weeklyViews">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>週增</th>
-        <td
-          mat-cell
-          *matCellDef="let row"
-          [coloredNumber]="row.bilibiliStats.weeklyViews"
-        >
-          {{ row.bilibiliStats.weeklyViews | number }}
+        <td mat-cell *matCellDef="let row" [coloredNumber]="row.weeklyViews">
+          {{ row.weeklyViews | number }}
         </td>
         <td
           mat-footer-cell
           *matFooterCellDef
-          [coloredNumber]="totalBilibiliWeeklyViews"
+          [coloredNumber]="totalWeeklyViews"
         >
-          {{ totalBilibiliWeeklyViews | number }}
+          {{ totalWeeklyViews | number }}
         </td>
       </ng-container>
 
-      <ng-container matColumnDef="bilibiliMonthlyViews">
+      <ng-container matColumnDef="monthlyViews">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>月增</th>
-        <td
-          mat-cell
-          *matCellDef="let row"
-          [coloredNumber]="row.bilibiliStats.monthlyViews"
-        >
-          {{ row.bilibiliStats.monthlyViews | number }}
+        <td mat-cell *matCellDef="let row" [coloredNumber]="row.monthlyViews">
+          {{ row.monthlyViews | number }}
         </td>
         <td
           mat-footer-cell
           *matFooterCellDef
-          [coloredNumber]="totalBilibiliMonthlyViews"
+          [coloredNumber]="totalMonthlyViews"
         >
-          {{ totalBilibiliMonthlyViews | number }}
+          {{ totalMonthlyViews | number }}
         </td>
       </ng-container>
 
