--- a/web/src/app/sidenav/sidenav.component.html
+++ b/web/src/app/sidenav/sidenav.component.html
@@ -30,6 +30,15 @@
       <mat-icon mat-list-icon svgIcon="stream"></mat-icon>
       <p mat-line>YouTube 直播</p>
     </a>
+    <!-- <a
+      mat-list-item
+      routerLink="/youtube-schedule-stream"
+      routerLinkActive="active"
+      (click)="buttonClick.emit()"
+    >
+      <mat-icon mat-list-icon svgIcon="calendar"></mat-icon>
+      <p mat-line>YouTube 預定直播</p>
+    </a> -->
     <a
       id="settings-button"
       mat-list-item
