--- a/web/src/app/charts/area-chart.component.html
+++ b/web/src/app/charts/area-chart.component.html
@@ -20,14 +20,14 @@
 >
   <ng-template #tooltipTemplate let-model="model">
     <p class="tooltip-caption">
-      {{ model.name * 1000 | date: "MM/dd HH:mm" }}
+      {{ model.name | date: "MM/dd HH:mm" }}
     </p>
     <p class="tooltip-caption">{{ model.value | number }}</p>
   </ng-template>
 
   <ng-template #seriesTooltipTemplate let-model="model">
     <p class="tooltip-caption">
-      {{ model[0].name * 1000 | date: "MM/dd HH:mm" }}
+      {{ model[0].name | date: "MM/dd HH:mm" }}
     </p>
     <p class="tooltip-caption">{{ model[0].value | number }}</p>
   </ng-template>
