--- a/web/src/app/streams-detail/streams-detail.component.html
+++ b/web/src/app/streams-detail/streams-detail.component.html
@@ -1,17 +1,17 @@
 <div class="streams-detail">
   <div class="content" fxLayout="row wrap" fxLayoutAlign="space-between center">
-    <a class="title" href="https://youtu.be/{{ stream.id }}">
+    <a class="title" href="https://youtu.be/{{ stream.streamId }}">
       {{ stream.title }}
     </a>
     <a
       class="info"
       fxFlex="55"
       fxFlex.lt-sm="100"
-      href="https://youtu.be/{{ stream.id }}"
+      href="https://youtu.be/{{ stream.streamId }}"
     >
       <img
         class="cover"
-        src="https://img.youtube.com/vi/{{ stream.id }}/maxresdefault.jpg"
+        src="https://img.youtube.com/vi/{{ stream.streamId }}/maxresdefault.jpg"
       />
     </a>
     <div
@@ -36,17 +36,17 @@
       <div fxLayout="row" fxLayoutAlign="space-around">
         <div flex="50">
           <div class="value">
-            {{ stream.start | date: "HH:mm:ss" }}
+            {{ stream.startTime | date: "HH:mm:ss" }}
           </div>
           <div class="caption">直播開始</div>
         </div>
         <div flex="50">
           <div class="value">
-            <ng-container *ngIf="stream.end; else clock">
-              {{ stream.start | parseISO | duration: (stream.end | parseISO) }}
+            <ng-container *ngIf="stream.endTime; else clock">
+              {{ stream.startTime | parseISO | duration: (stream.endTime | parseISO) }}
             </ng-container>
             <ng-template #clock>
-              {{ stream.start | parseISO | duration: (everySecond$ | async) }}
+              {{ stream.startTime | parseISO | duration: (everySecond$ | async) }}
             </ng-template>
           </div>
           <div class="caption">直播持續</div>
@@ -55,13 +55,13 @@
       <div fxLayout="row" fxLayoutAlign="space-around">
         <div flex="50">
           <div class="value">
-            {{ (stream.avgViewers | number) || " ----- " }}
+            {{ (stream.averageViewerCount | number) || " ----- " }}
           </div>
           <div class="caption">平均同接</div>
         </div>
         <div flex="50">
           <div class="value">
-            {{ (stream.maxViewers | number) || " ----- " }}
+            {{ (stream.maxViewerCount | number) || " ----- " }}
           </div>
           <div class="caption">最高同接</div>
         </div>
