refactor(web): remove unused hideRows

--- a/web/src/app/bilibili-channel/bilibili-channel.component.html
+++ b/web/src/app/bilibili-channel/bilibili-channel.component.html
@@ -145,11 +145,7 @@
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr
-        mat-row
-        *matRowDef="let row; columns: displayedColumns"
-        [hidden]="hideRows.includes(row.id)"
-      ></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
       <tr mat-footer-row *matFooterRowDef="displayedColumns"></tr>
     </table>
   </div>
