--- a/web/src/app/youtube-channel/youtube-channel.component.html
+++ b/web/src/app/youtube-channel/youtube-channel.component.html
@@ -44,7 +44,11 @@
 
       <ng-container matColumnDef="dailySubscriberCount">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>日增</th>
-        <td mat-cell *matCellDef="let row" [coloredNumber]="row.dailySubscriberCount">
+        <td
+          mat-cell
+          *matCellDef="let row"
+          [coloredNumber]="row.dailySubscriberCount"
+        >
           {{ row.dailySubscriberCount | number }}
         </td>
         <td mat-footer-cell *matFooterCellDef [coloredNumber]="totalDailySubs">
@@ -54,7 +58,11 @@
 
       <ng-container matColumnDef="weeklySubscriberCount">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>週增</th>
-        <td mat-cell *matCellDef="let row" [coloredNumber]="row.weeklySubscriberCount">
+        <td
+          mat-cell
+          *matCellDef="let row"
+          [coloredNumber]="row.weeklySubscriberCount"
+        >
           {{ row.weeklySubscriberCount | number }}
         </td>
         <td mat-footer-cell *matFooterCellDef [coloredNumber]="totalWeeklySubs">
@@ -64,7 +72,11 @@
 
       <ng-container matColumnDef="monthlySubscriberCount">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>月增</th>
-        <td mat-cell *matCellDef="let row" [coloredNumber]="row.monthlySubscriberCount">
+        <td
+          mat-cell
+          *matCellDef="let row"
+          [coloredNumber]="row.monthlySubscriberCount"
+        >
           {{ row.monthlySubscriberCount | number }}
         </td>
         <td
@@ -98,7 +110,11 @@
 
       <ng-container matColumnDef="weeklyViewCount">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>週增</th>
-        <td mat-cell *matCellDef="let row" [coloredNumber]="row.weeklyViewCount">
+        <td
+          mat-cell
+          *matCellDef="let row"
+          [coloredNumber]="row.weeklyViewCount"
+        >
           {{ row.weeklyViewCount | number }}
         </td>
         <td
@@ -112,7 +128,11 @@
 
       <ng-container matColumnDef="monthlyViewCount">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>月增</th>
-        <td mat-cell *matCellDef="let row" [coloredNumber]="row.monthlyViewCount">
+        <td
+          mat-cell
+          *matCellDef="let row"
+          [coloredNumber]="row.monthlyViewCount"
+        >
           {{ row.monthlyViewCount | number }}
         </td>
         <td
@@ -125,11 +145,7 @@
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr
-        mat-row
-        *matRowDef="let row; columns: displayedColumns"
-        [hidden]="hideRows.includes(row.id)"
-      ></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
       <tr mat-footer-row *matFooterRowDef="displayedColumns"></tr>
     </table>
   </div>
