feat(web): display updated_at

--- a/web/src/app/bilibili-channel/bilibili-channel.component.html
+++ b/web/src/app/bilibili-channel/bilibili-channel.component.html
@@ -1,8 +1,8 @@
 <div class="bilibili-channel">
-  <!-- <div class="toolbar" fxLayout="row" fxLayoutAlign="start center">
-    <span class="spacer"></span>
+  <div class="submenu" fxLayout="row" fxLayoutAlign="space-between center">
+    <div></div>
     <div class="updated-at">更新于 {{ updatedAt | date: "MM/dd HH:mm" }}</div>
-  </div> -->
+  </div>
   <div class="table-container">
     <table
       mat-table
