--- a/web/src/app/bilibili-channel/bilibili-channel.component.scss
+++ b/web/src/app/bilibili-channel/bilibili-channel.component.scss
@@ -1,12 +1,8 @@
 .bilibili-channel {
-  .toolbar {
-    padding: 8px 20px;
+  .submenu {
+    padding: 0 20px;
     max-width: 960px;
     margin: 0 auto;
-  }
-
-  .spacer {
-    flex: 1 0;
   }
 
   .table-container {
