--- a/web/src/app/youtube-stream/youtube-stream.component.html
+++ b/web/src/app/youtube-stream/youtube-stream.component.html
@@ -1,4 +1,8 @@
 <div class="youtube-stream">
+  <div class="submenu" fxLayout="row" fxLayoutAlign="space-between center">
+    <div></div>
+    <div class="updated-at">更新于 {{ updatedAt | date: "MM/dd HH:mm" }}</div>
+  </div>
   <div class="content" *ngFor="let group of streamGroup">
     <div class="date-label">{{ group.day | date: "MM / dd" }}</div>
     <div fxLayout="row wrap">
@@ -17,10 +21,16 @@
         >
           <div class="duration">
             <ng-container *ngIf="stream.endTime; else clock">
-              {{ stream.startTime | parseISO | duration: (stream.endTime | parseISO) }}
+              {{
+                stream.startTime
+                  | parseISO
+                  | duration: (stream.endTime | parseISO)
+              }}
             </ng-container>
             <ng-template #clock>
-              {{ stream.startTime | parseISO | duration: (everySecond$ | async) }}
+              {{
+                stream.startTime | parseISO | duration: (everySecond$ | async)
+              }}
             </ng-template>
           </div>
           <a
