--- a/web/src/app/vtubers-detail/vtubers-detail.component.html
+++ b/web/src/app/vtubers-detail/vtubers-detail.component.html
@@ -1,6 +1,6 @@
 <div class="vtubers-detail">
-  <div class="content" fxLayout="row wrap" fxLayoutAlign="space-between center">
-    <div class="info" fxFlex="40" fxFlex.lt-sm="100">
+  <div class="content">
+    <div class="info">
       <img class="profile" src="/assets/profiles/{{ vtuber.id }}.jpg" />
       <div class="name">{{ vtuber.name }}</div>
     </div>
