--- a/web/src/app/youtube-stream/_youtube-stream.theme.scss
+++ b/web/src/app/youtube-stream/_youtube-stream.theme.scss
@@ -35,6 +35,11 @@
 
 @mixin youtube-stream-typography($config) {
   .youtube-stream {
+    .updated-at {
+      font-size: mat-font-size($config, caption);
+      font-weight: mat-font-weight($config, caption);
+    }
+
     .date-label {
       font-size: mat-font-size($config, title);
       font-weight: mat-font-weight($config, caption);
