fix(web): fix component property name

--- a/web/src/app/charts/area-chart.component.html
+++ b/web/src/app/charts/area-chart.component.html
@@ -6,8 +6,8 @@
   [gradient]="true"
   [xAxis]="true"
   [yAxis]="true"
-  [xAxisTickFormatting]="dateTickFormatting"
-  [yAxisTickFormatting]="numTickFormatting"
+  [xAxisTickFormatting]="dateFormatting"
+  [yAxisTickFormatting]="numFormatting"
   [legend]="false"
   [xAxisLabel]="label"
   [showXAxisLabel]="!!label"
