--- a/web/src/app/vtubers-detail/vtubers-detail.component.html
+++ b/web/src/app/vtubers-detail/vtubers-detail.component.html
@@ -38,11 +38,8 @@
         <hs-area-chart
           [youtube]="true"
           [results]="youtubeSubs"
-          [xAxisTicks]="xAxisTicks"
-          [dateTickFormatting]="dateTickFormatting"
+          [dateFormatting]="dateFormatting"
           [label]="'YouTube 訂閱'"
-          [xScaleMin]="xScaleMin"
-          [xScaleMax]="xScaleMax"
         ></hs-area-chart>
       </div>
 
@@ -50,11 +47,8 @@
         <hs-area-chart
           [youtube]="false"
           [results]="bilibiliSubs"
-          [xAxisTicks]="xAxisTicks"
-          [dateTickFormatting]="dateTickFormatting"
+          [dateFormatting]="dateFormatting"
           [label]="'Bilibili 訂閱'"
-          [xScaleMin]="xScaleMin"
-          [xScaleMax]="xScaleMax"
         ></hs-area-chart>
       </div>
 
@@ -62,11 +56,8 @@
         <hs-area-chart
           [youtube]="true"
           [results]="youtubeViews"
-          [xAxisTicks]="xAxisTicks"
-          [dateTickFormatting]="dateTickFormatting"
+          [dateFormatting]="dateFormatting"
           [label]="'YouTube 播放'"
-          [xScaleMin]="xScaleMin"
-          [xScaleMax]="xScaleMax"
         ></hs-area-chart>
       </div>
 
@@ -74,11 +65,8 @@
         <hs-area-chart
           [youtube]="false"
           [results]="bilibiliViews"
-          [xAxisTicks]="xAxisTicks"
-          [dateTickFormatting]="dateTickFormatting"
+          [dateFormatting]="dateFormatting"
           [label]="'Bilibili 播放'"
-          [xScaleMin]="xScaleMin"
-          [xScaleMax]="xScaleMax"
         ></hs-area-chart>
       </div>
     </div>
