--- a/web/src/app/vtubers-detail/vtubers-detail.component.html
+++ b/web/src/app/vtubers-detail/vtubers-detail.component.html
@@ -1,8 +1,8 @@
 <div class="vtubers-detail">
   <div class="content">
     <div class="info">
-      <img class="profile" src="/assets/profiles/{{ vtuber.id }}.jpg" />
-      <div class="name">{{ vtuber.name }}</div>
+      <img class="profile" src="/assets/profiles/{{ vtuberId }}.jpg" />
+      <div class="name">{{ (vtuberId | vtubers).name }}</div>
     </div>
     <!-- <div
       class="number"
