--- a/web/src/app/youtube-schedule-stream/youtube-schedule-stream.component.html
+++ b/web/src/app/youtube-schedule-stream/youtube-schedule-stream.component.html
@@ -25,19 +25,16 @@
         <div class="title" title="{{ stream.title }}">
           {{ stream.title }}
         </div>
-        <div
-          class="time"
-          fxLayout="row"
-          fxLayoutAlign="start center"
-          *ngIf="findVTuber(stream.vtuberId); let vtuber"
-        >
+        <div class="time" fxLayout="row" fxLayoutAlign="start center">
           <img
             class="profile"
             src="/assets/thumbnail/{{ stream.vtuberId }}.jpg"
           />
-          <span class="name">{{ vtuber.name }}</span>
+          <span class="name">{{ (stream.vtuberId | vtubers).name }}</span>
           <span title="{{ stream.scheduleTime | date: 'yyyy/MM/dd HH:mm:ss' }}">
-            {{ stream.scheduleTime | parseISO | distance: (everyMinute$ | async) }}
+            {{
+              stream.scheduleTime | parseISO | distance: (everyMinute$ | async)
+            }}
           </span>
         </div>
       </div>
